@@ -1,1 +1,1 @@
-SUBDIRS = test
+EXTRA_DIST = test.plugin/Makefile test.plugin/main.c
