@@ -1,10 +1,10 @@
-EXTRA_DIST     = mkhelp.c
+EXTRA_DIST     = amcl.c mkhelp.c
 
 bin_PROGRAMS   = amcl
 
 amcl_SOURCES   = action.c alias.c color.c init.c keybind.c map.c misc.c \
 		 net.c prefs.c window.c wizard.c dialog.c version.c \
-                 modules.c modules_api.c modules.h modules_api.h amcl.h
+                 modules.c modules_api.c modules.h modules_api.h amcl.h 
 
 amcl_LDADD	= amcl.o
 
