@@ -1,16 +1,0 @@
-/* XPM */
-static char * error_xpm[] = {
-"10 10 3 1",
-" 	c None",
-".	c #000000",
-"+	c #FF0000",
-"..........",
-".++++++++.",
-".++++++++.",
-".++++++++.",
-".++++++++.",
-".++++++++.",
-".++++++++.",
-".++++++++.",
-".++++++++.",
-".........."};
