@@ -1,3 +1,14 @@
+Mon Jan  3 20:50:22 2000  Robin Ericsson  <lobbin@localhost.nu>
+
+	* README: Fixed up a little bit.
+
+	* PLUGIN.API: File which describes the plugin API added.
+	
+	* src/error.xpm, src/ok.xpm: removed
+
+	* src/modules.c: Removed the silly nonsens about pixmaps in
+	plugin list. Now it even works.
+
 Sat Nov 20 18:42:55 1999  Robin Ericsson  <lobbin@localhost.nu>
 
 	* NEWS: Added information about the news in version 0.7.0.
